bfa-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bigfastapi-deployment2
  labels:
    app: bigfastapi2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bigfastapi2
  template:
    metadata:
      labels:
        app: bigfastapi2
    spec:
      containers:
        - name: bigfastapi2
          image: bfa2
          imagePullPolicy: Never
          ports:
            - containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: bigfastapi-service2
spec:
  type: ClusterIP
  ports:
  - port: 40000
    targetPort: 7001
  selector:
    app: bigfastapi2



---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bigfastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bigfastapi.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bigfastapi-service2
                port:
                  number: 40000
