ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bigfastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bigfastapi.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bigfastapi2-service
                port:
                  number: 40000
